Projet GL/test/src/test/deca/context/valid/increment6/test-get2.deca
// Another test getX

// Historique : cree le 20/01/2023

class A{
    protected int x;

    int getX(){
        return this.x;
    }
}

{
    A a = new A();

    int x = a.getX();
}