Projet GL/test/src/test/deca/context/invalid/increment6/this-main.deca
// Test rule 3.43 This in a main

// Historique : cree le 18/01/2023

class A{}

{
    // Must be refused
    int x = this.x; 
}